<resources>
    <string name="app_name">TaskMate</string>
    <string name="continuee">Продолжить</string>
    <string name="welcome">Добро пожаловать в</string>
    <string name="privacy_policy">Нажимая «Продолжить», вы соглашаетесь с тем, что прочитали нашу Политику конфиденциальности</string>
    <string name="oops">Уупс...</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</string>
    <string name="try_again">Попробовать снова</string>
    <string name="exception_description">Просим прощения, но при работе программы, что-то пошло не так, вы в этом не виноваты!</string>
    <string name="loading">Загрузка</string>
    <string name="all_tasks">Все заметки</string>
    <string name="work">Работа</string>
    <string name="personal">Персональные</string>
    <string name="other">Другие</string>
    <string name="colors">Цвета</string>
    <string name="view">Отображение</string>
    <string name="search">Поиск...</string>
    <string name="todays_not_tasks">На сегодня задач нет</string>
    <string name="text">Текст</string>
    <string name="add">Добавить</string>
    <string name="lorem_ipsum_normal">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available</string>
    <string name="pin">Закрепить</string>
    <string name="empty" />
    <string name="title">Заголовок</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_type_text">Текст</string>
    <string name="task_type_list">Список</string>
    <string name="choose">Выбрать</string>
    <string name="saved">Сохранено</string>
    <string name="delete">Удалить</string>
    <string name="selected">Выбрано</string>
    <string name="delete_tasks">Удалить задачи?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="change">Изменить</string>
    <string name="sort">Сортировать</string>
    <string name="done">Готово</string>
    <string name="color">Цвет</string>
    <string name="grid">Сетка</string>
    <string name="linear">Список</string>
</resources>