<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".project.ui.fragment.welcome.FragmentWelcome"
    android:fitsSystemWindows="true">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        android:tintMode="src_atop"
        app:tint="#B3000000"
        android:adjustViewBounds="true"
        app:shapeAppearanceOverlay="@style/logo_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
        android:layout_marginBottom="@dimen/margin_very_big" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/title"
        android:textSize="28sp"
        android:textStyle="normal"
        android:text="@string/welcome"
        android:textColor="@color/text_color_in_button"
        android:layout_marginTop="@dimen/margin_very_big"
        android:layout_marginStart="@dimen/margin_very_big"
        android:layout_marginEnd="@dimen/margin_very_big" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_app_name"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_very_big"
        android:layout_marginEnd="@dimen/margin_very_big"
        android:text="@string/app_name"
        android:textColor="@color/text_color_in_button"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_cdc"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="@dimen/margin_big"
        android:src="@drawable/ic_cdc"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name"
        app:layout_constraintStart_toStartOf="@+id/tv_app_name"
        app:layout_constraintEnd_toEndOf="@+id/tv_app_name"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/button"
        android:text="@string/continuee"
        app:layout_constraintBottom_toTopOf="@+id/privacy_of_police"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/privacy_of_police"
        style="@style/hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin_very_big"
        android:gravity="center"
        android:text="@string/privacy_policy"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in" />

</androidx.constraintlayout.widget.ConstraintLayout>